# OpenGL-Playground

./: CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  classes.html  classtwod_1_1glinit-members.html  classtwod_1_1glinit.html  classtwod_1_1painter-members.html  classtwod_1_1painter.html  classtwod_1_1window-members.html  classtwod_1_1window.html  detail_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  display__modes_8h_source.html  files.html  functions.html  functions_enum.html  functions_func.html  glinit_8h_source.html  index.html  md_README.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespaces.html  namespacetwod.html  namespacetwod_1_1detail.html  pages.html  painter_8h_source.html  point_8h_source.html  structtwod_1_1point__t-members.html  structtwod_1_1point__t.html  structtwod_1_1vector2d-members.html  structtwod_1_1vector2d.html  vector2d_8h_source.html  window_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  classes_1.js  classes_3.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
doc/latex/: annotated.tex  classtwod_1_1glinit.tex  classtwod_1_1painter.tex  classtwod_1_1window.tex  md_README.tex  namespaces.tex  namespacetwod.tex  namespacetwod_1_1detail.tex  refman.tex  structtwod_1_1point__t.tex  structtwod_1_1vector2d.tex
include/: .glinit.h.swp  detail.h  display_modes.h  glinit.h  painter.h  point.h  vector2d.h  window.h
src/: glinit.cpp  main.cpp  vector2d.cpp  window.cpp
